Fixing table display overflow

--- a/static/css/forex.css
+++ b/static/css/forex.css
@@ -14,17 +14,17 @@
   
   #chartContainer{
     height: 300px; 
-    width: 90%; 
+    width: 70%; 
     margin-top: 5%;
     margin-left: 13%;
-    margin-right: auto;
+    margin-right:auto;
   }
   
   #table_container{
     margin-left: 30px;
     margin-top: 5%;
     width: 100%;
-    margin-right: 20px;
+    margin-right: 30px;
   }
   
   #heading{
@@ -41,7 +41,7 @@
     margin-left: 36%;
   }
 
-  @media(max-width:720px){
+  @media(max-width:600px){
     .nav-link {
    text-decoration: none;
    border-bottom: none;
@@ -54,9 +54,13 @@
     }
     #chartContainer{
         height: 300px;
-        width: 100%; 
+        width: 80%; 
         margin-top: 5%;
-        margin-left: 13%;
         margin-right: auto;
+      }
+      #table_container{
+        margin-top: 10%;
+        width: 80%;
+        overflow-x: auto;
       }
     }
