--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,6 +8,7 @@
 html,body{
     font-size: 10px;
     height: 100%;
+    overflow-x: hidden;
     font-family: Arial, Helvetica, sans-serif;
     color: rgba(0, 0, 0, 0.9);
 }
@@ -209,7 +210,10 @@ header {
   }
 
 /* Media queries */
-@media(max-width:720px){
+@media(max-width:600px){
+  body{
+    overflow-x: hidden;
+  }
  .nav-link {
 text-decoration: none;
 border-bottom: none;
@@ -223,9 +227,7 @@ font-weight: none;
  /*.navbar-dark{
    background-color: #333;
  } */
- #first-letter{
-   display: none;
- }
+ 
  .navbar-dark,.nav-item{
    justify-content: center;
    align-items: center;
@@ -242,8 +244,11 @@ font-weight: none;
 }
 #companies{
   margin-top: 10%;
-  justify-content: center;
-  align-self: center;
+}
+.jumbotron{
+  margin-left:3px;
+  margin-right:3px;
+  width:100%;
 }
 }
 
